# 1012-LampGang

./: README.md
HannahLamp/prototype/CloudLampPrototype/: CMakeLists.txt  prj.ZRelease.conf
HannahLamp/prototype/CloudLampPrototype/boards/: blackpill_f401cc.overlay  nucleo_f429zi.overlay
HannahLamp/prototype/CloudLampPrototype/src/: main.c
HannahLamp/prototype/CloudLampPrototypeBoard/: CloudLampPrototype-cache.lib  CloudLampPrototype.kicad_pcb  CloudLampPrototype.kicad_pcb-bak  CloudLampPrototype.net  CloudLampPrototype.pro  CloudLampPrototype.sch  CloudLampPrototype.sch-bak
